--- a/liteboardbackend/templates/conclusion.html
+++ b/liteboardbackend/templates/conclusion.html
@@ -2,30 +2,30 @@
 {% block content %}
     <div class="content">
         <div class="text-content">
-            <h3>Conclusion</h3>
+            <h2>Conclusion</h2>
 
-            <h5>Did Django and Materialize perform to your expectations? </h5>
-            <p>Django exceeded my expectations. One particular expectation that I had was that the code would be difficult to understand and implement. In reality, the code was actually very simple to read and write, due to Django utilizing Python. As well, Django was much more powerful than I expected. As detailed in the tutorial, entire databases could be constructed in a simple file of no more than 10 lines of code.</p>
-            <p>Materialize exceeded expectations, I thought it would be very limited with what you can do with it, but with added javascript it has a lot of potential</p>
+            <h4>Did Django and Materialize perform to your expectations? </h4>
+            <p>Django exceeded our expectations. We thought that learning a new language would pose problems along the way, however Django uses python, a language we were both familar in. Django is also very powerful and simple, much like jQuery in the sense that both use minimal amounts of code to produce big results. Around 10 lines only to create a db which is impressive.</p>
+            <p>Materialize met our expectations, after googling around about Materialize could do, we knew what we were getting into.</p>
 
-            <h5>Were Django and Materialize difficult to install or configure?</h5>
-            <p>Django was really easy to install. Since the server hosting this website is built on ubuntu, Python and Django were simple apt-get and pip installs respectively. Creating the web application architecture was simple as well, by running a handful of commands our back end architecture was set up and ready to configure. Configuration was difficult at times as Django is very strict with how servers are to be set up as to enforce good website design principles, but the tradeoff is that when you understand Django simple commands yield powerful results. One hiccup we could not resolve was using our server to host static files as Django has difficulties doing so once the server was pushed from a development server to the live server. We worked around this by embedding css into style tags at the tops of our headers, and hosting images on a third party website. </p>
-            <p>Materialize was very simple to install and configure. You just need to link to Materialize stylesheet, import JQuery, and import the Materialize JavaScript</p>
+            <h4>Were Django and Materialize difficult to install or configure?</h4>
+            <p>Django in the end was easy to install, but was a long process. Since the server hosting this website is built on ubuntu (our droplet we used on DigitalOcean), Python and Django were simple apt-get and pip installs respectively. There were a lot of forums and videos guiding us through the process, but without them it would have been impossible. Configuration was difficult at times as Django is very strict and specific, but the tradeoff is that when you understand Django simple commands yield powerful results (in the same sense as jQuery).</p>
+            <p>Materialize was very simple to install and configure. You just need to link to a Materialize stylesheet, import JQuery, and import the Materialize JavaScript.</p>
             
-            <h5>Was it easy to create the page(s) with Django and Materialize? </h5>
-            <p>There are actually quite a few steps to set up before you can use a page you created in Django. For example, a new html page has to have a view associated with it, which if it has a seperate address associated with it, needs a url to be configured and allowed by Django. It was initially difficult to understand how to create pages, but became easier as I understood Django. </p>
-            <p>It wasn't all to diffult to add Materialize components onto the Django website since it's just HTML. Understanding the jinja was the only part that really needed to be used intertwine with the materialize code. There were some limitations where I could not figure out how to access the django forms and database with Materialize</p>
+            <h4>Was it easy to create the page(s) with Django and Materialize? </h4>
+            <p>There were actaully a lot of steps to setup and configure before we could use or Django code. Hosting Django applications was a very difficult and long process, all of which had to be done on a terminal. We used DigitalOcean to host our webpage.</p>
+            <p>It was very easy to add Materialize components onto the Django website since it's just HTML; a language we have a lot of experience and practice with because of the lectures and labs.</p>
             
-            <h5>Was the learning curve steep compared with regular HTML / CSS / Javascript / PHP?</h5>
-            <p>For Django, it was quite steep. To learn it I had to follow along a YouTube tutorial split over 12 parts that detailed a websites creation from start to finish. It was the first time I’ve ever used a backend that enforced a model-view-template architecture, which was difficult to understand prior to learning it. </p>
-            <p>The learning curve was probably simpler compared to learning HTML/CSS/Javascript/PHP from scratch. Materialize had simple to navigate documentation. Once you understand html and how to initilize using JQuery than everything goes pretty smooth</p>
+            <h4>Was the learning curve steep compared with regular HTML / CSS / Javascript / PHP?</h4>
+            <p>For Django, it was steep at the beginnning like anything when you start. But there were a lot of online resources, including multiple youtube tutorials (creating a webpage from start to finish) and interesting videos, which were easy to follow. It was the first time we ever used a backend that enforced a "model-view-template" architecture, which again, was difficult to understand when we started, but picked up as we went along.</p>
+            <p>The learning curve was around the same compared to learning HTML/CSS/Javascript/PHP from scratch. Materialize has a lot of documentation online. Once you understand html and how to initilize using JQuery than everything goes pretty smooth, which was one of the lectures we had, so it was easy to build our knowledge from there.</p>
             
-            <h5>Would you have done things differently in retrospect? </h5>
-            <p>I personally would not do anything differently with Django, besides giving myself more time to learn how to host static files properly. Otherwise, I’m proud of how the website has turned out, and of the demo page’s functionality. </p>
-            <p>The concept idea for the demo page could have showed off more materialize components.</p>
+            <h4>Would you have done things differently in retrospect? </h4>
+            <p>We personally wouldn't. This was a great experience working with these front and back ends. They were simple to understand once we got the hang of it and there are a lot of resources online that helped us grasp concepts.</p>
+            <p>This was our first time creating a website with multiple pages, and everything went smoothly. So if it ain't broke don't fix it :)</p>
             
-            <h5>Did you regret your choice of frameworks?</h5>
-            <p>No. Initially, we were going to build our website using ReactJS as a front end, and NodeJS as a backend. We learned how difficult of a path that was to learn, especially when having little JavaScript experience prior. So, we switched from both of those frameworks to utilizing Materialize as the front end framework and Django as the backend. They were both much simpler to understand, and fit our needs much better. </p>
+            <h4>Did you regret your choice of frameworks?</h4>
+            <p>No. When we were looking through the choices of possible front end and back end combinations we knew we wanted to use django after getting the hang of it and Materialize was simple to understand from the get go.</p>
         </div>
     </div>
 {% endblock %}
