--- a/liteboardbackend/templates/credits.html
+++ b/liteboardbackend/templates/credits.html
@@ -5,7 +5,7 @@
             <h2>Credits</h2>
             <div class="row">
                 <div class="column">
-                    <img src="https://i.imgur.com/F8zSk14.jpg?1" class="responsive-img"/>
+                    <img src="https://i.imgur.com/F8zSk14.jpg?1" class="profiler"/>
                     <h4>Nikola Pavlovic</h4>
                     <ol>
                         <li>Tutorial and Demo website front-end</li>
@@ -13,7 +13,7 @@
                     </ol>
                 </div>
                 <div class="column">
-                    <img src="https://i.imgur.com/AelPfvy.jpg?1" class="responsive-img"/>
+                    <img src="https://i.imgur.com/AelPfvy.jpg?1" class="profiler"/>
                     <h4>Ryan Soliven</h4>
                     <ol>
                         <li>Tutorial + demo website back-end</li>
