--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -78,7 +78,7 @@
 			font-family: "Times New Roman", Times, serif;
 		}
 
-		.responsive-img {
+		.profiler {
 			width: 70%;
 			border-radius: 50%;
 		}
