--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -58,7 +58,7 @@
 
 		/* Style the content */
 		.content {
-			background-color: #ddd;
+			background-color: #f1f1f1;
 			width: 100%;
 			padding-top: 10px;
 			padding-bottom: 10px;
