--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -133,12 +133,13 @@
         <!-- Footer -->
         <div class="footer">
             <div class="centerfooter">
-                <a href="{% url 'home' %}">Framework Summary</a>
-                <a href="{% url 'install' %}">Installation Tutorial</a>
-                <a href="{% url 'demo' %}">Demo Creation</a>
-                <a href="{% url 'demohome' %}">Demo Page</a>
-                <a href="{% url 'conclusion' %}">Conclusion</a>
+                <div class="centerfooter">
+                <p><a href="{% url 'home' %}">Framework Summary</a> &nbsp &nbsp  <a href="{% url 'install' %}">Installation Tutorial</a> 
+                &nbsp &nbsp  <a href="{% url 'demo' %}">Demo Creation</a>&nbsp &nbsp 
+                <a href="{% url 'conclusion' %}">Conclusion</a>&nbsp &nbsp
                 <a href="{% url 'credits' %}">Credits</a>
+                </p>
+            </div>
             </div>
         </div>
     </body>
