--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -109,6 +109,28 @@
 			margin-right: auto;
 			width: 35%;
 		}
+        
+        /* Style the footer */
+		.footer {
+			background-color: #f1f1f1;
+			padding: 10px;
+		}
+		.centerfooter {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 50%;	
+		}
+
+		xmp {
+			white-space: pre-wrap;
+		}
+
+		@media only screen and (max-width: 600px) {
+			.parallax-container {
+				height: 150px;
+			}
+		}
 
 	</style>
     <body>
