--- a/liteboardbackend/templates/credits.html
+++ b/liteboardbackend/templates/credits.html
@@ -5,7 +5,7 @@
             <h2>Credits</h2>
             <div class="row">
                 <div class="column">
-                    <img src="https://i.imgur.com/F8zSk14.jpg?1" class="profiler"/>
+                    <img src="https://i.imgur.com/bxikcVP.jpg?1" class="profiler"/>
                     <h4>Nikola Pavlovic</h4>
                     <ul>
                         <li>Tutorial and Demo website front-end</li>
@@ -29,7 +29,7 @@
             <p><a href = "https://docs.djangoproject.com/en/2.1/">Django Documentation</a></p>
             <p><a href = "https://materializecss.com/">Materialize Documentation</a></p>
             <p><a href = "https://www.digitalocean.com/community/tutorials/how-to-set-up-django-with-postgres-nginx-and-gunicorn-on-ubuntu-16-04">DigitalOcean Setup</a></p>
-	    <p><a href = "https://youtu.be/nqT8c5OFjEQ">Travesty Media materialize tutorial</a></p>
+	    <p><a href = "https://youtu.be/nqT8c5OFjEQ">Travesty Media Materialize Tutorial</a></p>
         </div>
     </div>
 {% endblock %}
