--- a/liteboardbackend/templates/header.html
+++ b/liteboardbackend/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>lightboard</title>
+        <title>imageboard</title>
         <meta charset="utf-8"/>
         {% load staticfiles %}
         <!-- Icon Pack -->  
@@ -16,7 +16,7 @@
         <style>
         .header {
             overflow: hidden;
-            background-color: #f1f1f1;
+            background-color: #DC143C;
             padding: 20px 10px;
         }
 
@@ -69,7 +69,7 @@
     </style>
     <body>
         <div class="header">
-            <a href="{% url 'demohome' %}" class="logo"><img src="https://i.imgur.com/2uaKK6Y.png" width="35px"/>lightboard</a>
+            <a href="{% url 'demohome' %}" class="logo"><img src="https://i.imgur.com/2uaKK6Y.png" width="35px"/>imageboard</a>
             <div class="header-right">
                 <a class="btn-large light-blue darken-1 white-text waves-effect waves-light btn" href="{% url 'submit' %}">Add photo</a>
             </div>
