--- a/liteboardbackend/templates/header.html
+++ b/liteboardbackend/templates/header.html
@@ -22,7 +22,7 @@
 
         .header a {
             float: left;
-            color: black;
+            color: #000000;
             text-align: center;
             padding: 12px;
             text-decoration: none;
