--- a/liteboardbackend/templates/header.html
+++ b/liteboardbackend/templates/header.html
@@ -1,71 +1,83 @@
-{% extends "header.html" %}
+<!DOCTYPE HTML>
+<html lang="en">
+    <head>
+        <title>imageboard</title>
+        <meta charset="utf-8"/>
+        {% load staticfiles %}
+        <!-- Icon Pack -->  
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-{% block content %}
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    </head>
         <style>
-        .content {
-            margin-left: auto;
-            margin-right: auto;
-            text-align: center;
+        .header {
+            overflow: hidden;
+            background-color: #DC143C;
+            padding: 20px 10px;
         }
-        .materialboxed {
-            margin-left: auto;
-            margin-right: auto;
+
+        .header a {
+            float: left;
+            color: #000000;
             text-align: center;
+            padding: 12px;
+            text-decoration: none;
+            font-size: 18px; 
+            line-height: 25px;
+            border-radius: 4px;
         }
-        @media only screen and (max-width: 600px) {
-            .parallax-container {
-                height: 150px;
+
+        .header a.logo {
+            font-size: 25px;
+            font-weight: bold;
+        }
+
+        .header a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .header a.active {
+            background-color: dodgerblue;
+            color: white;
+        }
+
+        .header-right {
+            float: right;
+        }
+
+        .footer {
+            margin-top: 90px;
+        }
+
+        @media screen and (max-width: 700px) {
+            .header a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+            .header-right {
+                float: none;
             }
         }
-        </style>
 
-        <body>
-        <div id="add" class="fixed-action-btn">
-            <a class="btn-floating btn-large light-blue waves-effect waves-light scale-transition scale-out" href="{% url 'submit' %}">
-            <i class="large material-icons">add</i>
-            </a>
-        </div>
 
-        {% for post in object_list %}
-        <div class = "content">
-            <h5>{{ post.title }}</h5>
-            <h5>{{ post.name }}</h5>
-            <h5>{{ post.date_submitted|date:"Y-m-d" }}</h5>
-
-            <!-- Uncomment to enable parallax -->
-            <div class="parallax-container">
-                <div class="parallax"><img src="{{ post.link }}"/></div>
+    </style>
+    <body>
+        <div class="header">
+            <a href="{% url 'demohome' %}" class="logo"><img src="https://i.imgur.com/2uaKK6Y.png" width="35px"/>imageboard</a>
+            <div class="header-right">
+                <a class="btn-large light-blue darken-1 white-text waves-effect waves-light btn" href="{% url 'submit' %}">Add photo</a>
             </div>
-
-            <!-- Comment out to disable materialbox -->
-            <!-- <img class="materialboxed image" src="{{ post.link }}" data-caption="{{ post.date_submitted|date:"Y-m-d" }}"/> -->
-
         </div>
-        {% endfor %}
-        
-        <!--Import jQuery before materialize.js-->
-         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-         <script>
-         $(document).ready(function(){
-        //Parallax
-            $('.parallax').parallax();
-        //Material box
-            $('.materialboxed').materialbox();
-        //Floating Action Button
-            $('.fixed-action-btn').floatingActionButton();        
-         });
-        </script>
-        <script>
-            window.onscroll = function() {coolFloatingButton()};
-    
-            function coolFloatingButton() {
-            if (document.body.scrollTop > 90 || document.documentElement.scrollTop > 90) {
-                $(".btn-floating").removeClass("scale-out").addClass("scale-in");
-            } else {
-                $(".btn-floating").removeClass("scale-in").addClass("scale-out");
-            }   
-            }
-        </script>
-    </body> 
-{% endblock %}
+        <div>
+            {% block content %}{% endblock %}
+        </div>
+        <div class = "footer">
+        </div>
+    </body>
+</html>
