--- a/liteboardbackend/templates/demo_tutorial.html
+++ b/liteboardbackend/templates/demo_tutorial.html
@@ -23,7 +23,7 @@
             <br>
 
             <h5>Images</h5>
-            <p>Too display images there are a couple options between cards, material boxes, and parrallax. In our demo we decided to use parrallax because it's a unique way of showing images and is used in many modern websites. To parrallax is easy to implement but also needs to be imported throught jQuery.</p>
+            <p>To display images you can choose between cards, material boxes, and parrallax. Here, we decided to use parrallax because it's a unique way of showing images and is used in many modern websites. To parrallax is easy to implement but also needs to be imported throught jQuery.</p>
             <div class="card-panel">insert this into the previous function for floating buttons<xmp>
                 $('.parallax').parallax();
             </xmp></div>
