--- a/liteboardbackend/templates/demo_tutorial.html
+++ b/liteboardbackend/templates/demo_tutorial.html
@@ -79,7 +79,7 @@
             <p>
                 Now let's create a beautiful Django website, by exploring templating.
             </p>
-            <img src ="https://imgur.com/svi5erA" class = "regularpic"/>
+            <img src ="https://i.imgur.com/svi5erA.png" class = "regularpic"/>
             <p>
                 Django’s jinja templating allows developers to avoid unnecessarily repeating code, while maintaining consistent design. As highlighted by sections ( 1 ) and ( 2 ) in the above image, we can split the jinja template into two sections, the header ( 1 ) and the main content. It may not appear so to the user, but our header and main content files are created in completely separate HTML files, connected by jinja. This is achieved using nested content blocks in our jinja templates which when compiled by jinja connect the two HTML pages, allowing for repeated use of HTML code. Breaking it down to it’s core , this is how the markup would look to connect the files above:
             </p>
