--- a/liteboardbackend/templates/credits.html
+++ b/liteboardbackend/templates/credits.html
@@ -22,14 +22,10 @@
                 </div>
             </div>
             <h3>References</h3>
-            <p><a href = "https://www.w3schools.com/howto/howto_css_responsive_header.asp">Liteboard Header</a></p>
             <p><a href = "https://fonts.google.com/specimen/Lato">Lato Font</a></p>
-            <p><a href = "https://www.w3schools.com/howto/howto_css_three_columns.asp">3 Columns in CSS</a></p>
-            <p><a href = "https://www.youtube.com/watch?v=FNQxxpM1yOs&list=PLQVvvaa0QuDeA05ZouE4OzDYLHY-XH-Nd">Django Tutorial</a></p>
-            <p><a href = "https://docs.djangoproject.com/en/2.1/">Django Documentation</a></p>
-            <p><a href = "https://materializecss.com/">Materialize Documentation</a></p>
+            <p><a href = "https://docs.djangoproject.com/en/2.1/">Django</a></p>
+            <p><a href = "https://materializecss.com/">Materialize</a></p>
             <p><a href = "https://www.digitalocean.com/community/tutorials/how-to-set-up-django-with-postgres-nginx-and-gunicorn-on-ubuntu-16-04">DigitalOcean Setup</a></p>
-	    <p><a href = "https://youtu.be/nqT8c5OFjEQ">Travesty Media Materialize Tutorial</a></p>
         </div>
     </div>
 {% endblock %}
