--- a/liteboardbackend/templates/demo_tutorial.html
+++ b/liteboardbackend/templates/demo_tutorial.html
@@ -142,7 +142,7 @@
             <p>
                 Now that we’ve explored how Django utilizes the model-view template, let's move on to see how we actually retrieve user data from the database, and store it. To begin, let's look at the forms page Itself. 
             </p>
-            <img src = "https://i.imgur.com/vlLDi0I.png" class = "regularpic"/>
+            <img src = "https://i.imgur.com/jJbodMp.png" class = "regularpic"/>
             <p>
                 Again we can see the same header we had on the first page, in ( 1 ). As explained on the demo’s home page, we don’t need to redefine the code for it, we just tell it to reuse our predefined code and nest the new page into it. What is new on this page is our form, highlighted in ( 2 ).
             </p>
